examples/test/testpolicy4516.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4516
  namespace: namespace383
spec:
  podSelector:
    matchLabels:
      key46: value25
      key8: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value13
          key48: value8
          key36: value22
      podSelector:
        matchLabels:
          key3: value19
